--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">XBiography</a></li>
+                    <li><a href="#intro">Biography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
