--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             background-color: #fff;
             margin-left: 190px; /* Adjust this to match the sidebar width */
             padding: 20px;
+            min-height: 100vh; /* Ensure content area takes full height */
+            box-sizing: border-box; /* Include padding in the element's total width and height */
         }
         #sidebar nav ul {
             list-style: none;
