--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 10px;
+            padding: 0;
             box-sizing: border-box; 
             display: flex;
         }
@@ -24,6 +24,7 @@
         }
         .content {
             flex: 1;
+            padding: 10px;
             background-color: #fff;
             margin-left: 190px; /* Adjust this to match the sidebar width */
             padding: 20px;
