--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 30;
+            padding: 50px;
             box-sizing: border-box; 
             display: flex;
         }
