--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     body {
         flex-direction: column;
     }
+    
     #sidebar {
         position: fixed;
         top: 0;
@@ -365,25 +366,20 @@
             <div class="inner">
                 <h1 align="center">George Lopez</h1>
                 <h2 align="center">PORTFOLIO</h2>
-                <h2>Projects</h2>						
-                <div class="row-fluid layout5-row cropParent  margins-topbottom padding-all">
-                    <div class="sections-wrapper">
-                        <div class="span12">
-                            <div class="outer-margin-on first last">
-                                <div class="section article margins-on">
-                                    <div class="heading">
-                                        <div class="content">
-                                            <p><strong>Prompta Alpha-1 Project.</strong></p>
-                                            <p><strong>Abstract:</strong></p>
-                                            <p>A NLP and Sentiment Analysis application that analyses large text corpuses, initially represented by open ended responses to a survey applied to a group of persons.</p>
-                                            <p>The Topic Model Latent Dirichlet Allocation (LDA) was applied to the text corpus and a number of topics were outputted with their corresponding Sentiment Analysis.</p>
-                                            <p>This application served as a listening tool for the business that applied its results to suggest a change management for their customers.</p>
-                                            <p><strong>Should you would like to see a more detailed description of the application, please request it.</strong></p>
-                                            <p><strong>Mentorship Project.</strong></p>
-                                            <p><strong>Abstract:</strong></p>
-                                            <p>Decision makers take decisions commonly based on data that is collected from various sources. I would like to demonstrate that by having a unique source of data (a database) for performing analysis, it is possible to speed up greatly the process of extracting insight by data scientist to assist the decision making.</p>
-                                            <p><strong>Conclusions:</strong></p>
-                                            <p>I built a structured repository of data from unstructured data, scraped from two websites and placed it in a PostgreSQL database, allowing data scientist to perform inferences over this readily available data.</p>
+                <h2>Projects</h2>			
+                <div class="content">
+                    <p><strong>Prompta Alpha-1 Project.</strong></p>
+                    <p><strong>Abstract:</strong></p>
+                    <p>A NLP and Sentiment Analysis application that analyses large text corpuses, initially represented by open ended responses to a survey applied to a group of persons.</p>
+                    <p>The Topic Model Latent Dirichlet Allocation (LDA) was applied to the text corpus and a number of topics were outputted with their corresponding Sentiment Analysis.</p>
+                    <p>This application served as a listening tool for the business that applied its results to suggest a change management for their customers.</p>
+                    <p><strong>Should you would like to see a more detailed description of the application, please request it.</strong></p>
+                    <p><strong>Mentorship Project.</strong></p>
+                    <p><strong>Abstract:</strong></p>
+                    <p>Decision makers take decisions commonly based on data that is collected from various sources. I would like to demonstrate that by having a unique source of data (a database) for performing analysis, it is possible to speed up greatly the process of extracting insight by data scientist to assist the decision making.</p>
+                    <p><strong>Conclusions:</strong></p>
+                    <p>I built a structured repository of data from unstructured data, scraped from two websites and placed it in a PostgreSQL database, allowing data scientist to perform inferences over this readily available data.</p>
+                </div>     
                                             
         </section>
 
