--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 50px;
+            padding: 0;
             box-sizing: border-box; 
             display: flex;
+            flex-direction: column;
         }
         #sidebar {
-            width: 90px;
+            width: 25ch; /* Adjust the width as needed */
             position: fixed;
             top: 0;
             left: 0;
             height: 100%;
             background-color: #f4f4f4;
+            z-index: 1000; /* Ensure sidebar stays on top */
+            overflow-y: auto;
+            padding: 10px;
         }
         .content {
             flex: 1;
@@ -99,13 +103,13 @@
         margin: 0;
     }
     #sidebar nav ul li a {
-        padding: 10px 5px;
+        padding: 10px;
         text-align: center;
         border-right: 1px solid #ddd;
     }
     .content {
         margin-left: 0;
-        padding: 5px;
+        padding: 10px;
         padding-top: 60px; /* Adjust to avoid content being hidden behind the fixed header */
     }
         }     
@@ -119,7 +123,7 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">508Biography</a></li>
+                    <li><a href="#intro">515Biography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
