--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
             padding: 0;
             box-sizing: border-box; 
             display: flex;
-            flex-direction: column;
         }
+        #wrapper { 
+            display: flex;
+        }        
         #sidebar {
-            width: 25ch; /* Adjust the width as needed */
+            width: 20%; /* Set the sidebar width to 20% */
+            max-width: 200px; /* Ensure the sidebar doesn't get too wide */
             position: fixed;
             top: 0;
             left: 0;
@@ -35,6 +38,7 @@
             min-height: 100vh; /* Ensure content area takes full height */
             box-sizing: border-box; /* Include padding in the element's total width and height */
         }
+
         #sidebar nav ul {
             list-style: none;
             padding: 0;
@@ -54,10 +58,7 @@
         #sidebar nav ul li a:hover {
             color: red;
         }
-        #wrapper { 
-            margin-left: 5px; /* Adjust this margin to match the sidebar width plus any desired spacing */
-            padding: 10px; /* Add padding to avoid text being cut off */
-        }
+
         .icons {
             list-style: none;
             padding: 0;
@@ -123,7 +124,7 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">515Biography</a></li>
+                    <li><a href="#intro">1057Biography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
