--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         }
         #wrapper { 
             display: flex;
+            flex-direction: column;
         }        
         #sidebar {
             width: 20%; /* Set the sidebar width to 20% */
@@ -124,7 +125,7 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">1057Biography</a></li>
+                    <li><a href="#intro">1116Biography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
