--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
         }
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
-    body {
-        flex-direction: column;
-    }
-    
+
+    #wrapper { 
+            display: flex;
+            flex-direction: column;
+        }        
+
     #sidebar {
         width: 100%; /* Sidebar takes the full width on mobile devices */
         height: auto;
@@ -125,7 +127,7 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">1230Biography</a></li>
+                    <li><a href="#intro">1234Biography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
