--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         #wrapper { 
             display: flex;
             flex-direction: column;
+            padding: 10;
         }        
         #sidebar {
             width: 20%; /* Set the sidebar width to 20% */
