--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">1213Biography</a></li>
+                    <li><a href="#intro">JUN05Biography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
