--- a/index.html
+++ b/index.html
@@ -11,36 +11,25 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box; 
+        }
+        #wrapper {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
-        #wrapper { 
-            display: flex;
-            flex: 1;
-            flex-direction: row;
-        }        
         #sidebar {
-            width: 20%; /* Set the sidebar width to 20% */
-            max-width: 200px; /* Ensure the sidebar doesn't get too wide */
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100%;
+            width: 100%; /* Sidebar takes the full width */
             background-color: #f4f4f4;
-            z-index: 1000; /* Ensure sidebar stays on top */
             overflow-y: auto;
-            padding: 5px;
+            padding: 10px;
+            position: sticky;
+            top: 0;
         }
         .content {
             flex: 1;
             padding: 20px;
-            margin-left: 220px; /* Ensure content margin matches sidebar width */
             background-color: #fff;
-            min-height: 100vh; /* Ensure content area takes full height */
-            box-sizing: border-box; /* Include padding in the element's total width and height */
         }
-
         #sidebar nav ul {
             list-style: none;
             margin: 0;
@@ -60,7 +49,6 @@
         #sidebar nav ul li a:hover {
             color: red;
         }
-
         .icons {
             list-style: none;
             padding: 0;
@@ -76,30 +64,15 @@
         .email-link {
             color: red;
         }
-
-        /* Media Query for Mobile Devices */
         @media (max-width: 768px) {
-            body {
-                flex-direction: column;
-            }
-
-            #wrapper { 
-                flex-direction: column;
-            }
-
             #sidebar {
-                width: 100%; /* Sidebar takes the full width on mobile devices */
-                height: auto;
-                position: static; /* Ensure the sidebar scrolls with the content */
-                overflow: hidden; /* Hide overflow */
+                width: 100%;
             }
             #sidebar nav ul {
                 display: flex;
                 flex-direction: row;
-                overflow-x: auto; /* Horizontal scrolling if needed */
-                margin: 0;
-                padding: 0;
-                white-space: nowrap; /* Prevent line breaks */
+                overflow-x: auto;
+                white-space: nowrap;
             }
             #sidebar nav ul li {
                 flex: 1;
@@ -110,14 +83,10 @@
                 text-align: center;
                 border-right: 1px solid #ddd;
             }
-            .content {
-                margin-left: 0;
-                padding: 10px;
-                padding-top: 60px; /* Adjust to avoid content being hidden behind the fixed header */
-            }
         }
     </style>
 </head>
+
     
 <body class="is-preload">
 
@@ -126,7 +95,7 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">1312Biography</a></li>
+                    <li><a href="#intro">1319Biography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
