--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box; 
+            display: flex;
+            flex-direction: column;
         }
         #wrapper {
             display: flex;
@@ -24,6 +26,7 @@
             padding: 10px;
             position: sticky;
             top: 0;
+            z-index: 1000; /* Ensure sidebar stays on top */
         }
         .content {
             flex: 1;
@@ -86,35 +89,26 @@
         }
     </style>
 </head>
-
     
-<body class="is-preload">
-
-    <!-- Sidebar -->
-    <section id="sidebar">
-        <div class="inner">
+<body>
+    <div id="wrapper">
+        <div id="sidebar">
             <nav>
                 <ul>
-                    <li><a href="#intro">1319Biography</a></li>
-                    <li><a href="#one">Skills and Experience</a></li>
-                    <li><a href="#two">Resume</a></li>
-                    <li><a href="#three">Projects</a></li>
-                    <li><a href="#four">Papers</a></li>
-                    <li><a href="#five">Awards</a></li>
-                    <li><a href="#six">GitHub</a></li>
-                    <li><a href="#last">LinkedIn</a></li>
+                    <li><a href="#biography">1341Biography</a></li>
+                    <li><a href="#skills">Skills and Experience</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#papers">Papers</a></li>
+                    <li><a href="#awards">Awards</a></li>
+                    <li><a href="#github">GitHub</a></li>
+                    <li><a href="#linkedin">LinkedIn</a></li>
                 </ul>
             </nav>
         </div>
-    </section>
-
-    <!-- Wrapper -->
-    <div id="wrapper">
-        <!-- Intro -->
-        <section id="intro" class="wrapper style1 fullscreen fade-up">
-            <div class="inner">
-                <h1 align="center">George Lopez</h1>
-                <h2 align="center">PORTFOLIO</h2>
+        <div class="content">
+            <h1>George Lopez</h1>
+            <h2>PORTFOLIO</h2>
                 <h3>BIOGRAPHY</h3>
                 <p>As a Computer Science practitioner with a focus on data science (including machine learning and deep learning), experience includes working as a Data Scientist for a management consulting firm and in the IT sector for global companies such as Scotiabank, Accenture, and PwC.</p>
                 <p>A graduate of the machine learning mentorship program at SharpestMinds.</p>
