--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div id="sidebar">
             <nav>
                 <ul>
-                    <li><a href="#biography">1347Biography</a></li>
+                    <li><a href="#biography">1349!!!Biography</a></li>
                     <li><a href="#skills">Skills and Experience</a></li>
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="#projects">Projects</a></li>
