--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
@@ -11,24 +11,22 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box; 
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
+            box-sizing: border-box;
         }
         #wrapper {
             display: flex;
-            flex: 1;
+            min-height: 100vh;
+            flex-direction: row;
         }
         #sidebar {
-            width: 200px; /* Set the sidebar width */
+            width: 200px;
             background-color: #f4f4f4;
             overflow-y: auto;
             padding: 10px;
             position: sticky;
             top: 0;
             height: 100vh;
-            flex-shrink: 0; /* Prevent sidebar from shrinking */
+            flex-shrink: 0;
         }
         .content {
             flex: 1;
@@ -77,7 +75,6 @@
                 width: 100%;
                 height: auto;
                 position: relative;
-                top: 0;
             }
             #sidebar nav ul {
                 display: flex;
@@ -98,13 +95,14 @@
     </style>
 </head>
 
+
     
 <body>
     <div id="wrapper">
         <div id="sidebar">
             <nav>
                 <ul>
-                    <li><a href="#biography">1349!!!Biography</a></li>
+                    <li><a href="#biography">1354!!!Biography</a></li>
                     <li><a href="#skills">Skills and Experience</a></li>
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="#projects">Projects</a></li>
