--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div id="sidebar">
             <nav>
                 <ul>
-                    <li><a href="#biography">1510!!!Biography</a></li>
+                    <li><a href="#biography">1708Biography</a></li>
                     <li><a href="#skills">Skills and Experience</a></li>
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -113,10 +113,10 @@
                 </ul>
             </nav>
         </div>
-        <div class="content">
+        <div class="content" id="biography">
             <h1>George Lopez</h1>
             <h2>PORTFOLIO</h2>
-                <h3>BIOGRAPHY</h3>
+            <h3>BIOGRAPHY</h3>
                 <p>As a Computer Science practitioner with a focus on data science (including machine learning and deep learning), experience includes working as a Data Scientist for a management consulting firm and in the IT sector for global companies such as Scotiabank, Accenture, and PwC.</p>
                 <p>A graduate of the machine learning mentorship program at SharpestMinds.</p>
                 <p>Holds a Master of Science in Computer Science from Toronto Metropolitan University, Canada, and a Bachelor of Applied Mathematics and Computer Science from the National Autonomous University of Mexico (UNAM).</p>
