--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div id="sidebar">
             <nav>
                 <ul>
-                    <li><a href="#biography">1730Biography</a></li>
+                    <li><a href="#biography">1137Biography</a></li>
                     <li><a href="#skills">Skills and Experience</a></li>
                     <li><a href="#resume">Resume</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -134,8 +134,8 @@
         </section>
 
         <!-- One -->
-        <section id="one" class="wrapper style1 fullscreen fade-up">
-            <div class="inner">
+        <!-- <section id="one" class="wrapper style1 fullscreen fade-up"> --?
+            <div class="content" id="skills">
                 <h1 align="center">George Lopez</h1>
                 <h2 align="center">PORTFOLIO</h2>
                 <h3>SKILLS AND EXPERIENCE</h3>
@@ -182,7 +182,8 @@
                     <p>Willing to go the extra mile to achieve set goals.</p>
                 </body>
             </div>
-        </section>
+       <!-- </section> -->
+ 
 
         <!-- Two -->
         <section id="two" class="wrapper style1 fullscreen fade-up">
