--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="sidebar">
         <nav>
             <ul>
-                <li><a href="#biography">1657Biography</a></li>
+                <li><a href="#biography">1713Biography</a></li>
                 <li><a href="#skills">Skills and Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -284,8 +284,8 @@
         <h1 align="center">George Lopez</h1>
         <h2 align="center">PORTFOLIO</h2>
         <h2>PAPERS AND PUBLICATIONS</h2>
-        <a3 href="The Society for Modeling and Simulation International, ANNSIM (peer-reviewed)">htpps:annsim.org</a>
-    
+        <a href="https://www.annsim.org" target="_blank">The Society for Modeling and Simulation International, ANNSIM (peer-reviewed)</a>
+  
         <p>ACCELERATING THE TRAINING OF ARTIFICIAL NEURAL NETWORKS USING DATA PARALLELIZATION AND CPU AFFINITY ON CPUs AND GPUs (2023)</p>
         <p>SIMULATION OF PARALLELIZATION OF DEEP NEURAL NETWORKS BY DIVIDING DATA (publication in process) - 2024.</p>
         <h3>Towards Data Science</h3>
