--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="sidebar">
         <nav>
             <ul>
-                <li><a href="#biography">1734Biography</a></li>
+                <li><a href="#biography">1753Biography</a></li>
                 <li><a href="#skills">Skills and Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -290,9 +290,9 @@
         <p>SIMULATION OF PARALLELIZATION OF DEEP NEURAL NETWORKS BY DIVIDING DATA (publication in process) - 2024.</p>
         <h3>Towards Data Science</h3>
         <p>Buyers beware: fake product reviews are plaguing the internet. How Machine Learning can help to spot them (2019)</p>
-        <a href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)"</p>
-        <h3>Talks at AISC (Artificial Intelligence Soctaric Circles</h3>
-        <p>Combining Satellite Imagery and ML to predict poverty (2018)</p> 
+        <a href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)"</a>
+        <h3>Talks at AISC (Artificial Intelligence Socratic Circles</h3>
+        <a href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </a> 
         <p>Focal Loss for Dense Object Detection (2018)</p>                                                                                                                   
         
     </div>
