--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="sidebar">
         <nav>
             <ul>
-                <li><a href="#biography">1753Biography</a></li>
+                <li><a href="#biography">1221Biography</a></li>
                 <li><a href="#skills">Skills and Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -263,7 +263,7 @@
         
         <h3>EDUCATION</h3>
         <ul>
-            <li>Doctor of Philosophy in Computer Science with a focus on AI and DL, Ryerson University, outstanding GPA. Expected graduation: 2023</li>
+            <li>Doctor of Philosophy in Computer Science with a focus on AI and DL, Ryerson University, outstanding GPA. Expected graduation: 2025</li>
             <li>Master of Science in Computer Science, Ryerson University, 97.4% GPA, Ryerson Graduate Fellowship. Graduated: 2017</li>
             <li>Bachelor of Applied Mathematics and Computer Science, University of Mexico, 92.4% GPA. Graduated: 2000</li>
             <li>"Neural Networks and Deep Learning” by deeplearning.ai on Coursera. 2018</li>
@@ -276,9 +276,19 @@
         <h2 align="center">PORTFOLIO</h2>
         <h2>Projects</h2>
         <p><strong>Prompta Alpha-1 Project.</strong></p>
-        <p><strong>Abstract:</strong></p>
-        <p>A NLP and Sentiment Analysis application that analyses large text corpuses...</p>
+		<p>A NLP and Sentiment Analysis application that analyses large text corpuses, initially represented by open ended responses to a survey applied to a group of persons.</p>
+		<p>The Topic Model Latent Dirichlet Allocation (LDA) was applied to the text corpus and a number of topics were outputted with their corresponding&nbsp; Sentiment Analysis.</p>
+		<p>This application served as a listening tool for the business that applied&nbsp; its results to suggest a change management for their customers.</p>
+		<p><strong>Should you would like to see a more detailed description of the application, please request it.</strong></p>
         <!-- Other project content -->
+        <p><strong>Mentorship Project at Sharpestminds.</strong></p>
+		<p><strong>Abstract:&nbsp;</strong></p>
+		<p>Decision makers take decisions commonly based on data that is collected from various sources. By having a unique source of data (a database) for performing analysis, it is possible to speed up greatly the process of extracting insight by data scientist to assist the decision making.</p>
+		<p>I built a structured repository of data from unstructured data, scraped from two websites and placed it in a PostgreSQL database, allowing data scientist to perform inferences over this readily available data.</p>
+
+
+
+        
     </div>
     <div class="content" id="papers">
         <h1 align="center">George Lopez</h1>
@@ -289,8 +299,9 @@
         <p>ACCELERATING THE TRAINING OF ARTIFICIAL NEURAL NETWORKS USING DATA PARALLELIZATION AND CPU AFFINITY ON CPUs AND GPUs (2023)</p>
         <p>SIMULATION OF PARALLELIZATION OF DEEP NEURAL NETWORKS BY DIVIDING DATA (publication in process) - 2024.</p>
         <h3>Towards Data Science</h3>
-        <p>Buyers beware: fake product reviews are plaguing the internet. How Machine Learning can help to spot them (2019)</p>
-        <a href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)"</a>
+        <a href="https://towardsdatascience.com/how-twitter-and-machine-learning-kde-lda-help-to-predict-crime-5b8abbd15596"target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)</p> 
+        <a href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">Buyers beware: fake product reviews are plaguing the internet. How Machine Learning can help to spot them (2019)"</a>
+        <a href="https://medium.com/@jlopez_31188/using-chatgpt-4-for-coding-tips-and-tricks-5c66fb0013af" target="_blank">Using ChatGPT-4 for Coding, Tips and Tricks (2023)"</a>
         <h3>Talks at AISC (Artificial Intelligence Socratic Circles</h3>
         <a href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </a> 
         <p>Focal Loss for Dense Object Detection (2018)</p>                                                                                                                   
