--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="sidebar">
         <nav>
             <ul>
-                <li><a href="#biography">1221Biography</a></li>
+                <li><a href="#biography">1302Biography</a></li>
                 <li><a href="#skills">Skills and Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -282,7 +282,6 @@
 		<p><strong>Should you would like to see a more detailed description of the application, please request it.</strong></p>
         <!-- Other project content -->
         <p><strong>Mentorship Project at Sharpestminds.</strong></p>
-		<p><strong>Abstract:&nbsp;</strong></p>
 		<p>Decision makers take decisions commonly based on data that is collected from various sources. By having a unique source of data (a database) for performing analysis, it is possible to speed up greatly the process of extracting insight by data scientist to assist the decision making.</p>
 		<p>I built a structured repository of data from unstructured data, scraped from two websites and placed it in a PostgreSQL database, allowing data scientist to perform inferences over this readily available data.</p>
 
@@ -294,27 +293,34 @@
         <h1 align="center">George Lopez</h1>
         <h2 align="center">PORTFOLIO</h2>
         <h2>PAPERS AND PUBLICATIONS</h2>
-        <a href="https://www.annsim.org" target="_blank">The Society for Modeling and Simulation International, ANNSIM (peer-reviewed)</a>
-  
-        <p>ACCELERATING THE TRAINING OF ARTIFICIAL NEURAL NETWORKS USING DATA PARALLELIZATION AND CPU AFFINITY ON CPUs AND GPUs (2023)</p>
-        <p>SIMULATION OF PARALLELIZATION OF DEEP NEURAL NETWORKS BY DIVIDING DATA (publication in process) - 2024.</p>
-        <h3>Towards Data Science</h3>
-        <a href="https://towardsdatascience.com/how-twitter-and-machine-learning-kde-lda-help-to-predict-crime-5b8abbd15596"target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)</p> 
-        <a href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">Buyers beware: fake product reviews are plaguing the internet. How Machine Learning can help to spot them (2019)"</a>
-        <a href="https://medium.com/@jlopez_31188/using-chatgpt-4-for-coding-tips-and-tricks-5c66fb0013af" target="_blank">Using ChatGPT-4 for Coding, Tips and Tricks (2023)"</a>
-        <h3>Talks at AISC (Artificial Intelligence Socratic Circles</h3>
-        <a href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </a> 
-        <p>Focal Loss for Dense Object Detection (2018)</p>                                                                                                                   
-        
+        <a href="https://www.annsim.org" target="_blank"><strong>The Society for Modeling and Simulation International, ANNSIM (peer-reviewed)</strong></a>
+        <u1>
+        	<li>ACCELERATING THE TRAINING OF ARTIFICIAL NEURAL NETWORKS USING DATA PARALLELIZATION AND CPU AFFINITY ON CPUs AND GPUs (2023)</li>
+        	<li>SIMULATION OF PARALLELIZATION OF DEEP NEURAL NETWORKS BY DIVIDING DATA (publication in process) - 2024.</li>
+	</u1>
+        <h3><strong>Towards Data Science</strong></h3>
+	<u1>
+	        <li href="https://towardsdatascience.com/how-twitter-and-machine-learning-kde-lda-help-to-predict-crime-5b8abbd15596"target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)</li> 
+        	<li href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">Buyers beware: fake product reviews are plaguing the internet. How Machine Learning can help to spot them (2019)"</li>
+        	<li href="https://medium.com/@jlopez_31188/using-chatgpt-4-for-coding-tips-and-tricks-5c66fb0013af" target="_blank">Using ChatGPT-4 for Coding, Tips and Tricks (2023)"</li>	
+	</u1>
+
+        <h3><strong>Talks at AISC (Artificial Intelligence Socratic Circles</strong></h3>
+	<u1>    
+        <li href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </li> 
+        <li href="https://www.loom.com/share/eff2be4a3918409e804975d6405a79c7" target="_blank">Focal Loss for Dense Object Detection (2018)"</li>                                                                                                                   
+        </u1>
     </div>
     <div class="content" id="awards">
         <h1 align="center">George Lopez</h1>
         <h2 align="center">PORTFOLIO</h2>
         <h2>AWARDS</h2>
-        <p>Honorific Mention at University of Mexico, BSc in Applied Mathematics (1991)</p>
-        <p>Graduate Fellowship at Toronto Metropolitan University PhD and MSc (2015-2023)</p>
-        <p>Queen Elizabeth II – Graduate Scholarship in Science and Technology (PhD) 2020</p>
-        <p>Winner in Best AI Paper Explained competition, AISC (Artificial Intelligence Socratic Circles) 2018</p>
+	<u1>
+		<li>Honorific Mention at University of Mexico, BSc in Applied Mathematics (1991)</li>
+		<li>Queen Elizabeth II – Graduate Scholarship in Science and Technology (PhD) 2020</li>
+                <li>Winner in Best AI Paper Explained competition, AISC (Artificial Intelligence Socratic Circles) 2018</li>
+	</u1>
+
     </div>
     <div class="content" id="github">
         <h2>GITHUB</h2>
