--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="sidebar">
         <nav>
             <ul>
-                <li><a href="#biography">1308Biography</a></li>
+                <li><a href="#biography">1315Biography</a></li>
                 <li><a href="#skills">Skills and Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -250,7 +250,7 @@
         </ul>
         
         <h5>ACCENTURE Canada INC, SAP IT QA Test Lead (Permanent) (Sep 2003 - Jan 2008)</h5>
-        <p><strong>Application Managed Services for HEWLETT-PACKARD COMPANY</strong></p>
+        <h5><strong>Application Managed Services for HEWLETT-PACKARD COMPANY</strong></h5>
         <ul>
             <li>Ensured that core, mission-critical SAP projects (25+) underwent a thorough QA process including SIT, UAT, and Regression Testing, safeguarding a 1.5B+ dollars business.</li>
         </ul>
